直播功能，首页模块修改

--- a/modules/styles/order.confirm.css
+++ b/modules/styles/order.confirm.css
@@ -220,3 +220,9 @@
 	width: 80px;
 	height: 25px;
 }
+.order-confirm .layout .good-top div{
+	padding-left: 1em;
+}
+.order-confirm .layout>ul>li .item:before{
+	display: none;
+}
