--- a/modules/styles/home.css
+++ b/modules/styles/home.css
@@ -433,24 +433,24 @@
 	top: 8%;
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
-	width: 25%;
-	height: 84%;
+	width: 50px;
+	height: 50px;
 }
 
 .home .body .modules section:nth-of-type(1) .module_img {
-	background-image: url('../../modules/images/home/home_preview.png');
+	background-image: url('../../modules/images/home/icon_1.png');
 }
 
 .home .body .modules section:nth-of-type(2) .module_img {
-	background-image: url('../../modules/images/home/home_agent.png')
+	background-image: url('../../modules/images/home/icon_2.png')
 }
 
 .home .body .modules section:nth-of-type(3) .module_img {
-	background-image: url('../../modules/images/home/home_life.png')
+	background-image: url('../../modules/images/home/icon_3.png')
 }
 
 .home .body .modules section:nth-of-type(4) .module_img {
-	background-image: url('../../modules/images/home/home_headline.png')
+	background-image: url('../../modules/images/home/icon_4.png')
 }
 
 .home .body .modules section:nth-of-type(2) {
